# interactive-worktree

./: Cargo.toml  README.md  demo.tape  dist-workspace.toml
.github/workflows/: ci.yml  publish-crates.yml  publish.yml
src/: gh.rs  git.rs  gtr.rs  main.rs  worktree_ops.rs
src/commands/: ai.rs  clean.rs  config.rs  copy.rs  doctor.rs  editor.rs  go.rs  list.rs  mod.rs  mv.rs  new.rs  pr.rs  rm.rs  run.rs
