[package]
authors = ["takumi3488"]
description = "Interactive CLI for managing git worktrees"
edition = "2024"
license = "Apache-2.0"
name = "interactive-worktree"
repository = "https://github.com/takumi3488/interactive-worktree"
version = "0.1.5"

[[bin]]
name = "iwt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
inquire = "0.9"

[profile.release]
codegen-units = 1
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
