[package]
authors = ["takumi3488"]
description = "Interactive CLI for managing git worktrees"
edition = "2024"
license = "Apache-2.0"
name = "interactive-worktree"
repository = "https://github.com/smartcrabai/interactive-worktree"
version = "0.1.10"

[package.metadata.dist]
formula = "iwt"

[[bin]]
name = "iwt"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
inquire = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
